@@ -4,6 +4,7 @@ import excel.ExcelNode;
 import logic.config.excel.TileExcelConfig;
 
 import java.io.File;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 
@@ -49,8 +50,9 @@ public class GameConfig {
      * @return the game configuration
      */
     public static GameConfig loadFromDirectory(String path) {
-        ArrayList<TileExcelConfig> tiles = loadTilesFromDirectory(Paths.get(path, "tiles").toString());
-        ExcelNode gameConfigDocument = ExcelNode.load(Paths.get(path, "game.txt"));
+        String pathRessource = new File(GameConfig.class.getResource(".").getFile()).toPath().toString();
+        ArrayList<TileExcelConfig> tiles = loadTilesFromDirectory(pathRessource+ "/tiles");
+        ExcelNode gameConfigDocument = ExcelNode.load(Path.of(pathRessource + "/game.txt"));
 
         return new GameConfig(tiles,
                 Integer.parseInt(gameConfigDocument.getRow("MinPlayers").getValue("Value")),
@@ -66,6 +68,7 @@ public class GameConfig {
     private static ArrayList<TileExcelConfig> loadTilesFromDirectory(String path) {
         File root = new File(path);
 
+        System.out.println(path);
         if (!root.isDirectory()) {
             throw new IllegalArgumentException("Path is not a directory");
         }
